--- a/estate/views/estate_property_tag_views.xml
+++ b/estate/views/estate_property_tag_views.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
+    <!-- Tree View -->
+    <record id="estate_property_tag_view_tree" model="ir.ui.view">
+        <field name='name'>estate.property.tag.tree</field>
+        <field name='model'>estate.property.tag</field>
+        <field name='arch' type='xml'>
+            <tree string='Property Tags' editable="bottom">
+                <field name="name" />
+            </tree>
+        </field>
+    </record>
     <!-- Form view -->
-    <record id="estate_property_tag_view_form" model="ir.ui.view">
-        <field name='name'>estate_property_tag_form</field>
+    <record
+        id="estate_property_tag_view_form" model="ir.ui.view">
+        <field name='name'>estate.property.tag.form</field>
         <field name='model'>estate.property.tag</field>
         <field name='arch' type='xml'>
             <form>
                 <sheet>
                     <group string="Add Property Tags">
-                        <field name="name"/>
+                        <field name="name" />
                     </group>
                 </sheet>
             </form>
@@ -16,7 +27,8 @@
     </record>
 
     <!-- Menu Action -->
-    <record id="estate_property_tag_action" model='ir.actions.act_window'>
+    <record
+        id="estate_property_tag_action" model='ir.actions.act_window'>
         <field name="name">Property Tags</field>
         <field name="res_model">estate.property.tag</field>
         <field name="view_mode">tree,form</field>
