--- a/estate/views/estate_property_type_views.xml
+++ b/estate/views/estate_property_type_views.xml
@@ -1,26 +1,60 @@
 <?xml version="1.0"?>
 <odoo>
+    <!-- STAGES TREE VIEW + MUTI_EDIT -->
+    <record id="estate_property_type_view_tree" model="ir.ui.view">
+        <field name="name">estate_property_type_tree</field>
+        <field name="model">estate.property.type</field>
+        <field name="arch" type="xml">
+            <tree string="Stages">
+                <field name="sequence" widget="handle" />
+                <field name="name" />
+                <field name="offer_ids" />
+                <field name="offer_count" />
+            </tree>
+        </field>
+    </record>
 
     <!-- Form Action -->
-     <record id="estate_property_type_view_form" model="ir.ui.view">
+    <record id="estate_property_type_view_form" model="ir.ui.view">
         <field name="name">estate_property_type_form</field>
         <field name="model">estate.property.type</field>
         <field name='arch' type="xml">
             <form string='Property Type'>
                 <sheet>
-                        <h1>
-                            <label for="name"/>
-                            <field name='name'/>
-                        </h1>
+                    <h1>
+                        <label for="name" />
+                        <field name='name' />
+                    </h1>
+                    <button name="%(estate.estate_property_offer_action)d" type="action"
+                        class="oe_stat_button" icon="fa-money">
+                        <field name="offer_count" widget="statinfo" string="Offers" />
+                    </button>
+                    <field name='property_ids'>
+                        <tree>
+                            <field name='name' />
+                            <field name='expected_price' />
+                            <field name='state' />
+                        </tree>
+                    </field>
                 </sheet>
+
             </form>
         </field>
-     </record>
+    </record>
 
     <!-- Menu Action -->
     <record id="estate_property_type_action" model="ir.actions.act_window">
         <field name="name">Property Types</field>
         <field name="res_model">estate.property.type</field>
         <field name="view_mode">tree,form</field>
+    </record>
+
+    <!-- Estate property offer actions -->
+    <record id="estate_property_offer_action" model="ir.actions.act_window">
+        <field name="name">estate.property.offer.action</field>
+        <field name="res_model">estate.property.offer</field>
+        <field name="view_mode">tree</field>
+        <field name="domain">[('property_type_id', '=', active_id)]</field>
+        <!-- <field name="context">{'default_property_type_id': active_id}</field> -->
     </record>
 </odoo>
