--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -11,12 +11,13 @@
                     <field name='postcode' />
                     <field name='expected_price' />
                     <field name='bedrooms' />
-                    <field name='living_area' />
+                    <field name='living_area' filter_domain="[('living_area', '>=', self)]"/>
                     <field name='facades' />
                 </group>
                 <group>
                     <!-- Filter -->
-                    <filter string='Availible' name='active' domain="['|', ('state', '=', 'new'), ('state','=','offerreceived')]" />
+                     <!--  domain="['|', ('state', '=', 'new'), ('state','=','offerreceived')]" -->
+                    <filter string='Availible' name='active'  domain="['|', ('state', '=', 'new'), ('state','=','offerreceived')]"  />
                 </group>
                 <group>
                     <!-- Group View -->
@@ -32,19 +33,19 @@
         <field name="model">estate.property</field>
         <field name="arch" type='xml'>
             <form string='Property'>
-                <header>
-                    <button name="property_action_cancel" type="object" string="Cancel"/>
-                    <button name="property_action_sold" type="object" string="Sold"/>
+                <header >
+                    <button name="property_action_cancel" type="object" string="Cancel"  states="new,offer_received,offer_accepted"/>
+                    <button name="property_action_sold" type="object" string="Sold"  states="new,offer_received,offer_accepted"/>
+                    <field name='state' widget='statusbar'/>
                 </header>
                 <sheet>
                     <h1>
                         <field name='name' />
                     </h1>
-                        <field name="tag_ids" widget="many2many_tags"/>
+                        <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
                     <group>
                         <group>
-                            <field name='state'/>
-                            <field name='property_type_id'/>
+                            <field name='property_type_id' options="{'no_create': True}"/>
                             <field name='postcode' />
                             <field name='date_availability' />
                         </group>
@@ -62,14 +63,14 @@
                                     <field name="facades" />
                                     <field name="garage" />
                                     <field name="garden" />
-                                    <field name="garden_area" />
-                                    <field name="garden_orientation" />
+                                    <field name="garden_area" attrs="{'invisible': [('garden', '=', False)]}" />
+                                    <field name="garden_orientation" attrs="{'invisible': [('garden', '=', False)]}"/>
                                     <field name="total_area"/>
-                                    <!-- <field name='active' /> -->
+                                    <field name='active' />
                                 </group>
                             </page>
                             <page string="Offers">
-                                <field name="offer_ids"/>
+                                <field name="offer_ids"  attrs="{'readonly': [('state', 'in', ('offeraccepted', 'sold', 'canceled'))]}"/>
                             </page>
                             <page string="Other Info">
                                 <group>
@@ -89,14 +90,17 @@
         <field name='name'>estate.property.tree</field>
         <field name='model'>estate.property</field>
         <field name="arch" type="xml">
-            <tree string="Properties">
+            <tree string="Properties" decoration-success="state=='offerreceived' or state=='offeraccepted'" decoration-muted='state=="sold"' decoration-bf='state=="offeraccepted"'>
+                <field name='state' invisible='1'/>
+                <field name='active' invisible='1'/>
                 <field name="name" />
                 <field name="postcode" />
+                <field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>
                 <field name="bedrooms" />
                 <field name="living_area" />
                 <field name="expected_price" />
                 <field name="selling_price" />
-                <field name="date_availability" />
+                <field name="date_availability" optional='True'/>
             </tree>
         </field>
     </record>
@@ -106,5 +110,6 @@
         <field name="name">Properties</field>
         <field name="res_model">estate.property</field>
         <field name="view_mode">tree,form</field>
+        <field name='context'>{'search_default_active': True}</field>
     </record>
 </odoo>
