--- a/estate/views/estate_property_offer_views.xml
+++ b/estate/views/estate_property_offer_views.xml
@@ -12,7 +12,7 @@
                 <field name="status" invisible="1" />
                 <field name="validity" />
                 <field name="date_deadline" />
-                <field name="property_type_id" />
+                <!-- <field name="property_type_id"  /> -->
                 <button name="offer_object_button_accepted" type='object' icon="fa-check"   
                     string='Accept Offer' attrs="{'invisible': [('status', '!=', False)]}" />
                 <button name="offer_object_button_refused" type='object' icon="fa-times"
